--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-DB_URL = "mongodb+srv://harshaldeore412:BkibxLsfgigSUPNm@cluster0.0tu2d4y.mongodb.net/?retryWrites=true&w=majority&appName=Ticket"
+DB_URL = "mongodb+srv://harshaldeore412:BkibxLsfgigSUPNm@cluster0.0tu2d4y.mongodb.net/?retryWrites=true&w=majority&appName=Ticket/TicketMaster"
 DB_USER = "harshaldeore412"
 DB_PASSWORD= "BkibxLsfgigSUPNm"    
 DB_CLUSTER= "cluster0.0tu2d4y.mongodb.net"
