--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "expres": "^0.0.5",
     "express": "^4.21.1",
